InstructorEnvironment/04-NSG/nsg_armTemplate.json
{ 
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "deploymentResourceGroup": {
            "type": "string"
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]"         
        },
        "deploymentPrefix": {
            "type": "string"
        },
        "billingProject": {
            "type": "string",
            "defaultValue": ""
        },
        "addsClientsSubnets": {
            "type": "array"
        },
        "crlClientsSubnets": {
            "type": "array"
        },
        "adfsClientsSubnets": {
            "type": "array"
        },
        "jumpToAllSubnets": {
            "type": "array"
        },
        "crlIpAddress": {
            "type": "string"
        },
        "rdgwIpAddress": {
            "type": "string"
        },       
        "adfsIpAddress": {
            "type": "string"
        },
        "edAddressPrefix": {
            "type": "string"
        },
        "apAddressPrefix": {
            "type": "string"
        },
        "dsAddressPrefix": {
            "type": "string"
        },
        "jpAddressPrefix": {
            "type": "string"
        }
    },
    "variables": {
        "networkSecurityGroups": [
            {
                "name": "[concat(parameters('deploymentPrefix'), '-NSG-ED')]",
                "securityRules": [
                    {
                        "direction":  "inbound",
                        "priority":  210,
                        "name":  "AllowJumpServersInBound",
                        "description":  "Allow Jump Servers InBound",
                        "access":  "allow",
                        "protocol":  "*",
                        "sourceAddressPrefix":  "[parameters('jpAddressPrefix')]",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "inbound",
                        "priority":  220,
                        "name":  "AllowInBoundHttps",
                        "description":  "Allow InBound HTTPS traffic",
                        "access":  "allow",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "*",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "443",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "inbound",
                        "priority":  230,
                        "name":  "AllowInBoundHttp",
                        "description":  "Allow InBound HTTP CRL & OCSP traffic",
                        "access":  "allow",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "*",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "10.154.2.4",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "80",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "inbound",
                        "priority":  1980,
                        "name":  "DenyInBoundVnetUDP",
                        "description":  "Deny Inbound UDP Traffic from all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "udp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "inbound",
                        "priority":  1990,
                        "name":  "DenyInBoundVnetTCP",
                        "description":  "Deny Inbound TCP Traffic from all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "tcp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  230,
                        "name":  "AllowOutBoundHTTPSTrafficToADFS",
                        "description":  "Allow OutBound HTTPS traffic to ADFS",
                        "access":  "allow",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "[parameters('adfsIpAddress')]",
                        "destinationAddressPrefixes":  "",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "443",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  240,
                        "name":  "AllowOutBoundHTTPSTrafficToRDGW",
                        "description":  "Allow OutBound HTTPS traffic to RDGW",
                        "access":  "allow",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "[parameters('rdgwIpAddress')]",
                        "destinationAddressPrefixes":  "",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "443",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  250,
                        "name":  "AllowOutBoundHTTPTrafficToCRL",
                        "description":  "Allow OutBound HTTP traffic to Certification Authority CRL",
                        "access":  "allow",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "[parameters('crlIpAddress')]",
                        "destinationAddressPrefixes":  "",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "80",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  1910,
                        "name":  "DenyOutBoundUnsecureTcpInternetProtocols",
                        "description":  "Deny OutBound unsecure TCP Internet protocols",
                        "access":  "deny",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "Internet",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "",
                        "destinationPortRanges":  [
                                                        "25",
                                                        "445"
                                                    ]
                    },
                    {
                        "direction":  "outbound",
                        "priority":  1980,
                        "name":  "DenyOutBoundVnetTCP",
                        "description":  "Deny Outbound TCP Traffic to all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "tcp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  1990,
                        "name":  "DenyOutBoundVnetUDP",
                        "description":  "Deny Outbound UDP Traffic to all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "udp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    }
                ]
            },
            {
                "name": "[concat(parameters('deploymentPrefix'), '-NSG-AP')]",
                "securityRules": [
                    {
                        "direction":  "inbound",
                        "priority":  200,
                        "name":  "AllowInBoundIntraSubnetTraffic",
                        "description":  "Allow InBound Intra-Subnet Traffic InBound",
                        "access":  "allow",
                        "protocol":  "*",
                        "sourceAddressPrefix":  "[parameters('apAddressPrefix')]",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "inbound",
                        "priority":  210,
                        "name":  "AllowJumpServersInBound",
                        "description":  "Allow Jump Servers InBound",
                        "access":  "allow",
                        "protocol":  "*",
                        "sourceAddressPrefix":  "[parameters('jpAddressPrefix')]",
                        "sourceAddressPrefixes": [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "inbound",
                        "priority":  220,
                        "name":  "AllowInBoundAdfsTraffic",
                        "description":  "Allow InBound ADFS traffic",
                        "access":  "allow",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "",
                        "sourceAddressPrefixes":  "[parameters('adfsClientsSubnets')]",
                        "destinationAddressPrefix": "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "443",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "inbound",
                        "priority":  1980,
                        "name":  "DenyInBoundVnetUDP",
                        "description":  "Deny Inbound UDP Traffic from all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "udp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "inbound",
                        "priority":  1990,
                        "name":  "DenyInBoundVnetTCP",
                        "description":  "Deny Inbound TCP Traffic from all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "tcp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  200,
                        "name":  "AllowOutBoundIntraSubnetTraffic",
                        "description":  "Allow OutBound Intra-Subnet Traffic InBound",
                        "access":  "allow",
                        "protocol":  "*",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "[parameters('apAddressPrefix')]",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  210,
                        "name":  "AllowOutBoundActiveDirectoryTCP",
                        "description":  "Allow OutBound Active Directory TCP protocols to the Domain Controllers",
                        "access":  "allow",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "[parameters('dsAddressPrefix')]",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "",
                        "destinationPortRanges":  [
                                                        "53",
                                                        "88",
                                                        "135",
                                                        "137-139",
                                                        "389",
                                                        "445",
                                                        "464",
                                                        "636",
                                                        "3268",
                                                        "3269",
                                                        "49152-65535"
                                                    ]
                    },
                    {
                        "direction":  "outbound",
                        "priority":  220,
                        "name":  "AllowOutBoundActiveDirectoryUDP",
                        "description":  "Allow OutBound Active Directory UDP protocols to the Domain Controllers",
                        "access":  "allow",
                        "protocol":  "udp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "[parameters('dsAddressPrefix')]",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "",
                        "destinationPortRanges":  [
                                                        "53",
                                                        "88",
                                                        "123",
                                                        "137-139",
                                                        "389",
                                                        "464",
                                                        "49152-65535"
                                                    ]
                    },
                    {
                        "direction":  "outbound",
                        "priority":  230,
                        "name":  "AllowOutBoundHTTPTrafficToCRL",
                        "description":  "Allow OutBound HTTP traffic to Certification Authority CRL",
                        "access":  "allow",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "[parameters('crlIpAddress')]",
                        "destinationAddressPrefixes":  "",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "80",
                        "destinationPortRanges":  []
                    },
                    {
                      "direction":  "outbound",
                      "priority":  240,
                      "name":  "AllowOutBoundL3Dns",
                      "description":  "Allow OutBound DNS traffic to L3 Servers for AAD Connect ADFS verification",
                      "access":  "allow",
                      "protocol":  "udp",
                      "sourceAddressPrefix":  "10.154.3.5",
                      "sourceAddressPrefixes":  [],
                      "destinationAddressPrefix":  "",
                      "destinationAddressPrefixes": [
                        "4.2.2.1",
                        "4.2.2.2",
                        "4.2.2.3"
                      ],
                      "sourcePortRange":  "*",
                      "sourcePortRanges":  [],
                      "destinationPortRange":  "53",
                      "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  1910,
                        "name":  "DenyOutBoundUnsecureTcpInternetProtocols",
                        "description":  "Deny OutBound unsecure TCP Internet protocols",
                        "access":  "deny",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "Internet",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "",
                        "destinationPortRanges":  [
                                                        "25",
                                                        "53",
                                                        "445"
                                                    ]
                    },
                    {
                        "direction":  "outbound",
                        "priority":  1920,
                        "name":  "DenyOutBoundUnsecureUdpInternetprotocols",
                        "description":  "Deny OutBound unsecure UDP Internet protocols",
                        "access":  "deny",
                        "protocol":  "udp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "Internet",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "53",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  1980,
                        "name":  "DenyOutBoundVnetTCP",
                        "description":  "Deny Outbound TCP Traffic to all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "tcp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  1990,
                        "name":  "DenyOutBoundVnetUDP",
                        "description":  "Deny Outbound UDP Traffic to all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "udp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    }
                ]
            },
            {
                "name": "[concat(parameters('deploymentPrefix'), '-NSG-DS')]",
                "securityRules": [
                    {
                        "direction":  "inbound",
                        "priority":  200,
                        "name":  "AllowInBoundIntraSubnetTraffic",
                        "description":  "Allow InBound Intra-Subnet Traffic InBound",
                        "access":  "allow",
                        "protocol":  "*",
                        "sourceAddressPrefix":  "[parameters('dsAddressPrefix')]",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "inbound",
                        "priority":  210,
                        "name":  "AllowJumpServersInBound",
                        "description":  "Allow Jump Servers InBound",
                        "access":  "allow",
                        "protocol":  "*",
                        "sourceAddressPrefix":  "[parameters('jpAddressPrefix')]",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                      "direction":  "inbound",
                      "priority":  220,
                      "name":  "AllowInBoundActiveDirectoryTCP",
                      "description":  "Allow InBound Active Directory TCP traffic from the Subnets to the Domain Controllers",
                      "access":  "allow",
                      "protocol":  "tcp",
                      "sourceAddressPrefix":  "",
                      "sourceAddressPrefixes": "[parameters('addsClientsSubnets')]",
                      "destinationAddressPrefix":  "VirtualNetwork",
                      "destinationAddressPrefixes":  [],
                      "sourcePortRange":  "*",
                      "sourcePortRanges":  [],
                      "destinationPortRange":  "",
                      "destinationPortRanges":  [
                                                    "53",
                                                    "88",
                                                    "135",
                                                    "137-139",
                                                    "389",
                                                    "445",
                                                    "464",
                                                    "636",
                                                    "3268",
                                                    "3269",
                                                    "49152-65535"
                                                ]
                    },
                    {
                      
                      "direction":  "inbound",
                      "priority":  230,
                      "name":  "AllowInBoundActiveDirectoryUDP",
                      "description":  "Allow InBound Active Directory UDP traffic from the Subnets to the Domain Controllers",
                      "access":  "allow",
                      "protocol":  "udp",
                      "sourceAddressPrefix":  "",
                      "sourceAddressPrefixes":  "[parameters('addsClientsSubnets')]",
                      "destinationAddressPrefix":  "VirtualNetwork",
                      "destinationAddressPrefixes":  [],
                      "sourcePortRange":  "*",
                      "sourcePortRanges":  [],
                      "destinationPortRange":  "",
                      "destinationPortRanges":  [
                                                    "53",
                                                    "88",
                                                    "123",
                                                    "137-139",
                                                    "389",
                                                    "464",
                                                    "49152-65535"
                                                ]
                    },
                    {
                      
                      "direction":  "inbound",
                      "priority":  240,
                      "name":  "AllowInBoundCRL",
                      "description":  "Allow InBound TCP HTTP traffic to Certification Authority CRL & OCSP",
                      "access":  "allow",
                      "protocol":  "tcp",
                      "sourceAddressPrefix":  "",
                      "sourceAddressPrefixes":  "[parameters('crlClientsSubnets')]",
                      "destinationAddressPrefix":  "[parameters('crlIpAddress')]",
                      "destinationAddressPrefixes":  "",
                      "sourcePortRange":  "*",
                      "sourcePortRanges":  [],
                      "destinationPortRange":  "80",
                      "destinationPortRanges":  []
                    },
                    {
                        "direction":  "inbound",
                        "priority":  1980,
                        "name":  "DenyInBoundVnetUDP",
                        "description":  "Deny Inbound UDP Traffic from all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "udp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "inbound",
                        "priority":  1990,
                        "name":  "DenyInBoundVnetTCP",
                        "description":  "Deny Inbound TCP Traffic from all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "tcp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  200,
                        "name":  "AllowOutBoundIntraSubnetTraffic",
                        "description":  "Allow OutBound Intra-Subnet Traffic InBound",
                        "access":  "allow",
                        "protocol":  "*",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "[parameters('dsAddressPrefix')]",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  210,
                        "name":  "AllowOutBoundHTTPSTrafficToADFS",
                        "description":  "Allow OutBound HTTPS traffic to ADFS",
                        "access":  "allow",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "[parameters('adfsIpAddress')]",
                        "destinationAddressPrefixes":  "",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "443",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  1910,
                        "name":  "DenyOutBoundUnsecureTcpInternetProtocols",
                        "description":  "Deny OutBound unsecure TCP Internet protocols",
                        "access":  "deny",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "Internet",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "",
                        "destinationPortRanges":  [
                                                        "25",
                                                        "445"
                                                    ]
                    },
                    {
                        "direction":  "outbound",
                        "priority":  1980,
                        "name":  "DenyOutBoundVnetTCP",
                        "description":  "Deny Outbound TCP Traffic to all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "tcp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  1990,
                        "name":  "DenyOutBoundVnetUDP",
                        "description":  "Deny Outbound UDP Traffic to all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "udp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    }
                ]
            },
            {
                "name": "[concat(parameters('deploymentPrefix'), '-NSG-JP')]",
                "securityRules": [
                    {
                        "direction":  "inbound",
                        "priority":  200,
                        "name":  "AllowInBoundIntraSubnetTraffic",
                        "description":  "Allow InBound Intra-Subnet Traffic InBound",
                        "access":  "allow",
                        "protocol":  "*",
                        "sourceAddressPrefix":  "[parameters('jpAddressPrefix')]",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "inbound",
                        "priority":  210,
                        "name":  "AllowInBoundRdgwTraffic",
                        "description":  "Allow InBound Remote Desktop Gateway traffic",
                        "access":  "allow",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "[parameters('edAddressPrefix')]",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix": "[parameters('rdgwIpAddress')]",
                        "destinationAddressPrefixes":  "",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "443",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "inbound",
                        "priority":  1980,
                        "name":  "DenyInBoundVnetUDP",
                        "description":  "Deny Inbound UDP Traffic from all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "udp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "inbound",
                        "priority":  1990,
                        "name":  "DenyInBoundVnetTCP",
                        "description":  "Deny Inbound TCP Traffic from all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "tcp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  200,
                        "name":  "AllowOutBoundIntraSubnetTraffic",
                        "description":  "Allow OutBound Intra-Subnet Traffic InBound",
                        "access":  "allow",
                        "protocol":  "*",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "[parameters('jpAddressPrefix')]",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  210,
                        "name":  "AllowOutBoundActiveDirectoryTCP",
                        "description":  "Allow OutBound Active Directory TCP protocols to the Domain Controllers",
                        "access":  "allow",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "[parameters('dsAddressPrefix')]",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "",
                        "destinationPortRanges":  [
                                                        "53",
                                                        "88",
                                                        "135",
                                                        "137-139",
                                                        "389",
                                                        "445",
                                                        "464",
                                                        "636",
                                                        "3268",
                                                        "3269",
                                                        "49152-65535"
                                                    ]
                    },
                    {
                        "direction":  "outbound",
                        "priority":  220,
                        "name":  "AllowOutBoundActiveDirectoryUDP",
                        "description":  "Allow OutBound Active Directory UDP protocols to the Domain Controllers",
                        "access":  "allow",
                        "protocol":  "udp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "[parameters('dsAddressPrefix')]",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "",
                        "destinationPortRanges":  [
                                                        "53",
                                                        "88",
                                                        "123",
                                                        "137-139",
                                                        "389",
                                                        "464",
                                                        "49152-65535"
                                                    ]
                    },
                    {
                        "direction":  "outbound",
                        "priority":  230,
                        "name":  "AllowOutBoundHTTPSTrafficToADFS",
                        "description":  "Allow OutBound HTTPS traffic to ADFS",
                        "access":  "allow",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "[parameters('adfsIpAddress')]",
                        "destinationAddressPrefixes":  "",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "443",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  240,
                        "name":  "AllowOutBoundHTTPTrafficToCRL",
                        "description":  "Allow OutBound HTTP traffic to Certification Authority CRL",
                        "access":  "allow",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "[parameters('crlIpAddress')]",
                        "destinationAddressPrefixes":  "",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "80",
                        "destinationPortRanges":  []
                    },
                    {
                      "direction":  "outbound",
                      "priority":  250,
                      "name":  "AllowOutBoundTrafficToSubnets",
                      "description":  "Allow OutBound Jump Server traffic to all Subnets",
                      "access":  "allow",
                      "protocol":  "*",
                      "sourceAddressPrefix":  "VirtualNetwork",
                      "sourceAddressPrefixes":  [],
                      "destinationAddressPrefix":  "",
                      "destinationAddressPrefixes":  "[parameters('jumpToAllSubnets')]",
                      "sourcePortRange":  "*",
                      "sourcePortRanges":  [],
                      "destinationPortRange":  "*",
                      "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  1910,
                        "name":  "DenyOutBoundUnsecureTcpInternetProtocols",
                        "description":  "Deny OutBound unsecure TCP Internet protocols",
                        "access":  "deny",
                        "protocol":  "tcp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "Internet",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "",
                        "destinationPortRanges":  [
                                                        "25",
                                                        "53",
                                                        "445"
                                                    ]
                    },
                    {
                        "direction":  "outbound",
                        "priority":  1920,
                        "name":  "DenyOutBoundUnsecureUdpInternetprotocols",
                        "description":  "Deny OutBound unsecure UDP Internet protocols",
                        "access":  "deny",
                        "protocol":  "udp",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "Internet",
                        "destinationAddressPrefixes":  [],
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "53",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  1980,
                        "name":  "DenyOutBoundVnetTCP",
                        "description":  "Deny Outbound TCP Traffic to all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "tcp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    },
                    {
                        "direction":  "outbound",
                        "priority":  1990,
                        "name":  "DenyOutBoundVnetUDP",
                        "description":  "Deny Outbound UDP Traffic to all Azure and on-premises subnets.",
                        "access":  "deny",
                        "sourceAddressPrefix":  "VirtualNetwork",
                        "sourceAddressPrefixes":  [],
                        "destinationAddressPrefix":  "VirtualNetwork",
                        "destinationAddressPrefixes":  [],
                        "protocol":  "udp",
                        "sourcePortRange":  "*",
                        "sourcePortRanges":  [],
                        "destinationPortRange":  "*",
                        "destinationPortRanges":  []
                    }
                ]
            }
        ],
        "tags": {
            "system": "[parameters('deploymentPrefix')]",
            "component": "Network Security Groups",
            "billingProject": "[parameters('billingProject')]"
        }
    },
    "resources": [
        {
            "apiVersion": "2019-06-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('networkSecurityGroups')[copyIndex('nsgLoop')].name]",
            "location": "[parameters('location')]",
            "copy": {
                "name": "nsgLoop",
                "count": "[length(variables('networkSecurityGroups'))]"
            },
            "tags": "[variables('tags')]",
            "properties": {
            "copy": [
                {
                    "name": "securityRules",
                    "count": "[length(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules)]",
                    "input": {
                    "name": "[variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].name]",
                    "properties": {
                        "description": "[variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].description]",
                        "protocol": "[variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].protocol]",
                        "sourcePortRange": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourcePortRange, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourcePortRange, json('null'))]",
                        "sourcePortRanges": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourcePortRanges, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourcePortRanges, json('null'))]",
                        "destinationPortRange": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationPortRange, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationPortRange, json('null'))]",
                        "destinationPortRanges": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationPortRanges, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationPortRanges, json('null'))]",
                        "sourceAddressPrefix": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourceAddressPrefix, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourceAddressPrefix, json('null'))]",
                        "sourceAddressPrefixes": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourceAddressPrefixes, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].sourceAddressPrefixes, json('null'))]",
                        "destinationAddressPrefix": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationAddressPrefix, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationAddressPrefix, json('null'))]",
                        "destinationAddressPrefixes": "[if(not(equals(variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationAddressPrefixes, json('null'))), variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].destinationAddressPrefixes, json('null'))]",                                
                        "access": "[variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].access]",
                        "priority": "[variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].priority]",
                        "direction": "[variables('networkSecurityGroups')[copyIndex('nsgLoop')].securityRules[copyIndex('securityRules')].direction]"
                    }
                    }
                }
            ]              
            }                
        }
    ]    
}
